--- a/source/content.html.erb
+++ b/source/content.html.erb
@@ -12,76 +12,40 @@
     <h2>January – June 2014</h2>
     <dl>
       <dt>Total Number of Requests</dt>
-      <dd>90</dd>
+      <dd>304</dd>
     </dl>
   </section>
 
   <br><br>
 
-  <section class="scorecard">
-    <h2>January – June 2014</h2>
-    <dl>
-      <dt>Number of Requests Granted</dt>
-      <dd>0</dd>
-    </dl>
-  </section>
-
-<br /><br />
-  <section class="scorecard">
-    <h2>January – June 2014</h2>
-    <dl>
-      <dt>Total Number of DMCA Takedown Requests</dt>
-      <dd>10</dd>
-    </dl>
-  </section>
-  <br><br>
   <section class="scorecard">
     <h2>January – June 2014</h2>
     <dl>
       <dt>Percentage of Requests Granted</dt>
-      <dd>40<small>%</small></dd>
+      <dd>0<small>%</small></dd>
     </dl>
   </section>
-
 </div>
 
-<div class="col-md-9">
-  <h2>Imagine a world in which every single human being can freely share in the sum of all knowledge.</h2>
+<div class="col-md-8">
+  <h2>Imagine a world in which <span class="blackout">every single human being can freely share in the sum of all knowledge.</span></h2>
   <p>
-    The Wikimedia projects make up the world's largest repository of human knowledge. With that much freely available information, someone is bound to get upset by some of the content from time to time. Every year, we receive requests to remove or change material that has been posted onto a Wikimedia project.
+    The Wikimedia projects make up one of the world's largest repositories of human knowledge. With that much information, someone is bound to get upset by some of the content from time to time. While the vast majority of content disputes are resolved by users themselves, in some extreme cases the Wikimedia Foundation may receive a legal demand to override our users.
   </p>
 
   <p>
-    But the Wikimedia projects are yours, not ours. People just like you from around the world write, upload, edit, and curate all of the content. Therefore, we believe users should decide what belongs on Wikimedia projects.
+    The Wikimedia projects are yours, not ours. People just like you from around the world write, upload, edit, and curate all of the content. Therefore, we believe users should decide what belongs on Wikimedia projects whenever legally possible.
   </p>
 
   <p>
-    Below, you will find more information about the number of requests we receive, where they come from, and how they could impact free knowledge. You can also learn more about how we fight for freedom of speech through our defense of user programs in the FAQ.
+    Below, you will find more information about the number of requests we receive, where they come from, and how they could impact free knowledge. You can also learn more about how we fight for freedom of speech through our user assistance programs in the <a href="/faq">FAQ</a>.
   </p>
 
   <blockquote>
     <p>We change people through conversation, not through censorship.</p>
     <footer>
-      <img src="http://lorempixel.com/100/100/people/">
+      <img src="/images/quote_jay.png">
       <p>Jay Z<small>Musician (2010)</small></p>
-    </footer>
-  </blockquote>
-
-  <h2>DMCA Takedown Notices</h2>
-  <p>
-   The Wikimedia community is made up of creators, collectors, and consumers of free knowledge. While most material appearing on Wikimedia projects is in the public domain or openly licensed, occasionally copyrighted material makes it way onto the projects.
- </p>
-  <p>
-    The Wikimedia Foundation is obligated under the Digital Millenium Copyright Act (DMCA) to remove copyright-infringing material upon receipt of a proper takedown request. When we receive a DMCA takedown request, we thoroughly evaluate the request to ensure that it is valid. If we believe it is, we remove the allegedly infringing content and we are transparent about that removal. If we do not believe it is valid, we will push back as appropriate. To learn more about DMCA procedures, see our DMCA policy.
-  </p>
-  <p>
-    Below, we have provided information about the DMCA takedown notices we have received in the past and how we responded to them.
-  </p>
-  <blockquote>
-    <p>A well-functioning copyright law carefully balances the interests of the public in access to expressive works and ... the interests of copyright owners in being compensated for uses of their works.</p>
-    <footer>
-      <img src="http://lorempixel.com/100/100/people/">
-      <p>Pamuela Samuelson<small>Director of Berkeley Center for Law & Technology (2010)</small></p>
     </footer>
   </blockquote>
 </div>
@@ -89,12 +53,22 @@
 <div class="col-md-4">
   <div class="story">
     <h3>
-      <small>Story</small><br>
-      French DCRI Case<br>
+      French Intelligence Agency<br>
       <small>March 2013</small>
     </h3>
     <hr />
-    <p>In March 2013, a French intelligence agency called the DCRI detained a French Wikipedia user and threatened him with severe criminal penalties if he did not use his administrative rights to delete from French Wikipedia information about a military base that the DCRI deemed classified. The supposedly classified information was actually publicly available because the military had provided interviews and a tour of the base to local reporters. We defended the Wikipedia user involved and fought to keep the content up on French Wikipedia. Read more.</p>
+    <p>A <a href="https://en.wikipedia.org/wiki/Direction_centrale_du_renseignement_int%C3%A9rieur">French intelligence agency</a> summoned a Wikipedia user to its offices, and threatened him with severe criminal penalties if he did not use his administrative rights to delete information about a <a href="https://fr.wikipedia.org/wiki/Station_hertzienne_militaire_de_Pierre-sur-Haute">military base</a> from <a href="https://fr.wikipedia.org/">French Wikipedia</a> that the agency deemed classified. The supposedly classified information was actually publicly available because the military had provided interviews and a tour of the base to local reporters. We defended the user involved and fought to keep the content up on Wikipedia. <a href="https://meta.wikimedia.org/wiki/Legal_and_Community_Advocacy/Statement_on_France">Read more...</a></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <h3>
+      Monkey Selfie<br>
+      <small>January 2014</small>
+    </h3>
+    <hr />
+    <p>A photographer left his camera unattended in a national park in <a href="https://en.wikipedia.org/wiki/North_Sulawesi">North Sulawesi</a>, <a href="https://en.wikipedia.org/wiki/Indonesia">Indonesia</a>. A female <a href="https://en.wikipedia.org/wiki/Celebes_crested_macaque">crested black macaque monkey</a> got ahold of the camera and took a series of pictures, including some self-portraits. The pictures were featured in an online newspaper article and eventually posted to <a href="https://commons.wikimedia.org/">Commons</a>. We received a takedown request from the photographer, claiming that he owned the copyright to the photographs. We didn't agree, so we denied the request.</p>
   </div>
 </div>
 
@@ -102,24 +76,81 @@
   <div class="story">
     <img src="/images/story_aboriginal.png">
     <h3>
-      <small>Story</small><br>
-      Tasmanian Aboriginal Language Case<br>
+      Aboriginal Language<br>
       <small>July 2012</small>
     </h3>
+    <p>An Tasmanian aboriginal language center demanded the removal of the <a href="https://en.wikipedia.org/wiki/Palawa_kani">English Wikipedia article on "palawa kani"</a>, claiming copyright over the entirety of the language. We refused to remove the article because copyright law simply cannot be used to stop people from using an entire language or to prevent general discussion about the language. Such a broad claim would have chilled free speech and negatively impacted research, education, and public discourse — activities that Wikimedia serves to promote.</p>
+  </div>
+</div>
+
+<div class="col-md-3">
+  <section class="scorecard">
+    <h2>January – June 2014</h2>
+    <dl>
+      <dt>Total Number of DMCA Takedown Requests</dt>
+      <dd>58</dd>
+    </dl>
+  </section>
+  <br><br>
+  <section class="scorecard">
+    <h2>January – June 2014</h2>
+    <dl>
+      <dt>Percentage of Requests Granted</dt>
+      <dd>41<small>%</small></dd>
+    </dl>
+  </section>
+</div>
+
+<div class="col-md-8">
+  <h2>DMCA Takedown Notices</h2>
+  <p>
+   The Wikimedia community is made up of creators, collectors, and consumers of free knowledge. While most material appearing on Wikimedia projects is in the <a href="https://en.wikipedia.org/wiki/Public_domain">public domain</a> or <a href="https://en.wikipedia.org/wiki/Free_license">freely licensed</a>, on occasion, copyrighted material makes its way onto the projects.
+ </p>
+  <p>
+    The <a href="https://en.wikipedia.org/wiki/Digital_Millennium_Copyright_Act">Digital Millennium Copyright Act</a> (DMCA) safe harbor provision requires us to remove infringing material if we receive a proper takedown request. We thoroughly evaluate each DMCA takedown request to ensure that it is valid. We only remove allegedly infringing content when we believe that a request is valid and we are transparent about that removal. If we do not believe a request to be valid, we will push back as appropriate. To learn more about DMCA procedures, see our <a href ="https://wikimediafoundation.org/wiki/DMCA_Policy">DMCA policy</a>.
+  </p>
+  <p>
+    Below, we provide information about the DMCA takedown notices we have received in the past and how we responded to them.
+  </p>
+  <blockquote>
+    <p>A well-functioning copyright law carefully balances the interests of the public in access to expressive works and... the interests of copyright owners in being compensated for uses of their works.</p>
+    <footer>
+      <img src="/images/quote_samuelson.png">
+      <p>Pamuela Samuelson<small>Director of Berkeley Center for Law &amp; Technology (2010)</small></p>
+    </footer>
+  </blockquote>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <h3>
+      Babe Ruth's "Called Shot"<br>
+      <small>March 2014</small>
+    </h3>
     <hr />
-    <p>In July 2012, an Aboriginal language center demanded the removal of the English Wikipedia article on "palawa kani", claiming copyright over the entirety of the language. We refused to remove the article because copyright law simply cannot be used to prevent people from using an entire language, nor should it be used to prevent general discussion about the language. Additionally, such a broad claim would have chilled free speech and negatively impacted research, education, and public discourse -- activities that Wikimedia serves to promote.</p>
+    <p>A film shot by Matt Kandle at the <a href="https://en.wikipedia.org/wiki/1932_World_Series">1932 World Series</a> provides evidence of <a href="https://en.wikipedia.org/wiki/Babe_Ruth">Babe Ruth's</a> famous “<a href="https://en.wikipedia.org/wiki/Babe_Ruth%27s_called_shot">called shot</a>,” in which he gestured to center field before hitting a home run to the same location. The copyright owner sent us a DMCA takedown request regarding a still image from the film used on <a href="https://en.wikipedia.org">English Wikipedia</a>. We declined to remove the image on the basis of <a href="https://en.wikipedia.org/wiki/Fair_use">fair use</a>, citing its extraordinary value in illustrating the famous moment and the educational purpose it serves.</p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <img src="/images/story_aboriginal.png">
+    <h3>
+      Obama &amp; Mandela Meet<br>
+      <small>December 2013</small>
+    </h3>
+    <p>We received a takedown notice for a photo on <a href="https://commons.wikimedia.org/">Commons</a> of then-Senator <a href="https://en.wikipedia.org/wiki/Barack_Obama">Barack Obama’s</a> first meeting with <a href="https://en.wikipedia.org/wiki/Nelson_Mandela">Nelson Mandela</a>. Because the photographer David Katz was a federal employee at the time, the photo was believed to be in the <a href="https://en.wikipedia.org/wiki/Copyright_status_of_work_by_the_U.S._government">public domain</a>. Katz argued the photo was not taken as part of his “official duties” and thus not in the public domain. After an exhaustive factual investigation, we could not find sufficient evidence that photography was one of Katz’s official duties and therefore removed the image. <a href="https://commons.wikimedia.org/wiki/Commons:Village_pump/Archive/2013/12#Update_to_Obama-Mandela_DMCA_takedown">Read more...</a></p>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="story">
     <h3>
-      <small>Story</small><br>
-      Monkey Picture<br>
-      <small>January 2014</small>
+      The Classics<br>
+      <small>November 2013</small>
     </h3>
     <hr />
-    <p>In July 2011, an award-winning photographer left his camera unattended in a national park in North Sulawesi, Indonesia. A female crested black macaque monkey got ahold of the camera and took a series of pictures, including some self-portraits. The pictures were featured in an online newspaper article and eventually posted to Commons. We received a takedown request in January 2014 based on the argument that the photographer owned the copyright to the photographs. Believing that the photographs are in the public domain, we denied the request.</p>
+    <p>A publishing company sent us a takedown request concerning four famous works on <a href="https://wikisource.org/">Wikisource</a>: French translations of <a href="https://en.wikipedia.org/wiki/Jane_Austen">Jane Austen's</a> <a href="http://fr.wikisource.org/wiki/Les_Cinq_Filles_de_Mrs_Bennet">Pride and Prejudice</a> and <a href="http://fr.wikisource.org/wiki/Persuasion">Persuasion</a>, a French translation <a href="https://en.wikipedia.org/wiki/Arthur_Conan_Doyle">Arthur Conan Doyle's</a> <a href="https://fr.wikisource.org/wiki/Les_Aventures_de_Sherlock_Holmes">The Adventures of Sherlock Holmes</a>, and <a href="https://en.wikipedia.org/wiki/Jean_de_la_Fontaine">Jean de la Fontaine’s</a> <a href="http://fr.wikisource.org/wiki/Fables_de_La_Fontaine,_livres_I-III">Fables</a>. We immediately noticed the peculiarity with the request: all four original works (and likely their French translations as well) were old enough to have fallen into the public domain. When we alerted the company to this point, it rescinded the takedown notice.</p>
   </div>
 </div>
 
