--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,9 +10,9 @@
 
 <div class="col-md-12">
 	<p class="lead">
-		<a target="_blank" href="http://wikimediafoundation.org/wiki/Vision">Our mission</a> is to provide access to the sum of all human knowledge. We believe that protecting user privacy and defending against censorship are essential to the success of that mission. Every year, we receive requests from governments, individuals, and organizations to disclose information about our users or to delete or alter content on our projects. Some are legitimate. Some are not.
+		<a target="_blank" href="http://wikimediafoundation.org/wiki/Vision">Our mission</a> is to provide free access to the sum of all human knowledge. We believe that protecting user privacy and defending against censorship are essential to the success of that mission. Every year, we receive requests from governments, individuals, and organizations to disclose information about our users or to delete or alter content on our projects. Some are legitimate. Some are not.
 	<br /> <br />
-		Through this transparency report, we hope to shed some light on the requests we recieve and how we respond to them.
+		The purpose of this transparency report is to shed light on the requests we receive and how we respond to them.
 	</p>
 </div>
 
@@ -45,12 +45,13 @@
 		</p>
 	</a>
 </div>
+
 <div class="col-md-12">
 <blockquote>
     <p>Sunlight is said to be the best of disinfectants.</p>
     <footer>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/Brandeisl.jpg">
-      <p>Louis Brandeis<small> Former Associate Justice of the Supreme Court of the United States (1914)</small></p>
+      <img src="/images/quote_brandeis.png">
+      <p>Louis Brandeis<small>Former Associate Justice of the <br />Supreme Court of the United States (1914)</small></p>
     </footer>
   </blockquote>
 </div>
