--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -12,7 +12,7 @@
 		<h2>January – June 2014</h2>
 		<dl>
 			<dt>Total Number of Requests</dt>
-			<dd>10</dd>
+			<dd>56</dd>
 		</dl>
 	</section>
 	<br><br>
@@ -20,30 +20,28 @@
 		<h2>January – June 2014</h2>
 		<dl>
 			<dt>Percentage of Times Information Produced</dt>
-			<dd>10<small>%</small></dd>
+			<dd>14<small>%</small></dd>
 		</dl>
 	</section>
 
 </div>
 
-<div class="col-md-9">
+<div class="col-md-8">
 	<p class="lead">
-	Freedom of speech is essential to the Wikimedia movement – our projects cannot flourish in an ecosystem where individuals cannot speak freely.
+	<a href="https://meta.wikimedia.org/wiki/Wikimedia_Foundation_Guiding_Principles#Free_speech">Freedom of speech is essential</a> to the Wikimedia movement — our projects cannot flourish in an ecosystem where individuals cannot speak freely. Our users trust us to protect their identities against unlawful disclosure and we take this responsibility seriously.
 	</p>
 
-	<p>Our users trust us to protect their identities and we take this responsibility seriously. We collect very little nonpublic information about users and retain that information for a short period of time.</p>
+	<p>However, every year, governments, individuals, and corporations ask us to disclose user data. Often, we have no nonpublic information to disclose because we <a href="https://wikimediafoundation.org/wiki/Privacy_policy#Types_of_Information_We_Receive_From_You.2C_How_We_Get_It.2C_.26_How_We_Use_It">collect little nonpublic information</a> about users and retain that information for a <a href="https://meta.wikimedia.org/wiki/Data_retention_guidelines">short period of time</a>. But when we do have data, we carefully evaluate every request before considering disclosure. If the requests do not meet our <a href="https://wikimediafoundation.org/wiki/Requests_for_user_information_procedures_%26_guidelines">standards</a> — if they are overly broad, unclear, or irrelevant—we will push back on behalf of our users.</p>
 
-	<p>However, every year, law enforcement officials, government agencies, individuals, and corporations ask us to disclose users’ personal information. Often, we have no nonpublic information to disclose. But when we do, we carefully evaluate every request before considering disclosure. If the requests do not meet our standards -- if they are overly broad, unclear, or irrelevant -- we will push back on behalf of our users. You can also learn more about our efforts to reform US laws that set unclear legal standards about disclosure of user information in our FAQ.</p>
-
-	<p>If we must comply with a legally valid request, we will notify the affected user before we disclose, if we are legally permitted and have the means to do so. In certain cases, we may provide financial assistance to users to fight an invalid request. </p>
+	<p>If we must produce information due to a legally valid request, we will notify the affected user before we disclose, if we are legally permitted and have the means to do so. In certain cases, we may help find assistance for users to fight an invalid request.</p>
 
 	<p>Below, you will find more information about the requests for user data we receive.</p>
 
 	<blockquote>
 		<p>Man is least himself when he talks in his own person. Give him a mask, and he will tell you the truth.</p>
 		<footer>
-			<img src="http://lorempixel.com/100/100/people/">
-			<p>Oscar Wilde, Writer & Poet (1891)</p>
+			<img src="/images/quote_wilde.png">
+			<p>Oscar Wilde, Writer &amp; Poet (1891)</p>
 		</footer>
 	</blockquote>
 
