--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -52,7 +52,7 @@ h2 {
 }
 
 .container .jumbotron {
-	padding-left: 10px;
+	padding-left: 24px;
 	padding-top: 38px;
 	padding-bottom: 22px;
 	margin-bottom: 42px;
@@ -92,6 +92,12 @@ h2 {
 	line-height: 40px;
 }
 
+header {
+	img {
+		margin-right: 5px;
+	}
+}
+
 footer {
 	border-top: 1px solid $gray;
 	padding-top: 20px;
@@ -116,6 +122,7 @@ footer {
 	display: block;
 	border-top: 6px solid $blue;
 	background: #ffffff;
+	padding-bottom: 12px;
 
 	&:hover {
 		text-decoration: none;
@@ -136,7 +143,7 @@ footer {
 		font-family: serif;
 		font-size: 22px/28px;
 		color: #333;
-		margin: 20px;
+		margin: 20px 16px 20px;
 
 		small {
 			font: 12px sans-serif;
@@ -147,7 +154,7 @@ footer {
 	}
 
 	p {
-		margin: 20px;
+		margin: 20px 16px 14px;
 	}
 
 	.icon {
@@ -187,30 +194,30 @@ footer {
 blockquote {
 	border: none;
 	color: $blue;
-	font: 140px serif;
+	font: 120px serif;
 	line-height: 50px;
 	margin-top: 60px;
-	width: 590px;
+	width: 680px;
 	margin-bottom: 60px;
 
 	p {
 		color: #000;
 		font: 26px/36px serif;
 		font-weight: normal;
-		width: 400px;
+		width: 500px;
 		margin-left: 80px;
 	}
 
 	footer {
 		padding: 0;
-		padding-top: 30px;
+		padding-top: 10px;
 		border: none;
 		font-size: 12px;
 
 		p {
 			font: 18px sans-serif;
 			margin-top: 25px;
-			margin-left: 190px;
+			margin-left: 170px;
 			color: $gray;
 			text-transform: uppercase;
 
@@ -233,11 +240,11 @@ blockquote {
 
 		img {
 			width: 72px;
-			margin-left: 100px;
+			margin-left: 80px;
 			height: 72px;
 			border-radius: 50%;
 			float: left;
-			border: 3px solid $blue;
+			border: 4px solid $blue;
 		}
 	}
 
@@ -248,7 +255,7 @@ blockquote {
 	}
 
 	&:after {
-		margin-top: -80px;
+		margin-top: -60px;
 		float: right;
 		content: '”';
 	}
@@ -260,7 +267,7 @@ blockquote {
 	margin: 5px 0 10px 0;
 	border-top: 7px solid $blue;
 	background: #ffffff;
-	padding: 20px;
+	padding: 20px 16px 0;
 
 	h2 {
 		margin: 0;
