--- a/source/stylesheets/graph.css.scss
+++ b/source/stylesheets/graph.css.scss
@@ -48,6 +48,15 @@
 			font-size: 15px;
 			margin-left: 5px;
 			font-family: sans-serif;
+
+			&.disabled {
+				color: #ccc;
+				cursor: text;
+
+				&:hover {
+					text-decoration: none;
+				}
+			}
 		}
 	}
 
