Content and style changes
Change-Id: I682b034a8ef2495d112cafaff9544998c084b5ef

--- a/source/content.html.erb
+++ b/source/content.html.erb
@@ -38,7 +38,7 @@
   </p>
 
   <p>
-    Below, you will find more information about the number of requests we receive, where they come from, and how they could impact free knowledge. You can also learn more about how we fight for freedom of speech through our user assistance programs in the <a href="/faq">FAQ</a>.
+    Below, you will find more information about the number of requests we receive, where they come from, and how they could impact free knowledge. You can also learn more about how we fight for freedom of speech through our user assistance programs in the <a href="/faq#information">FAQ</a>.
   </p>
 
   <blockquote>
@@ -79,7 +79,7 @@
       Aboriginal Language<br>
       <small>July 2012</small>
     </h3>
-    <p>An Tasmanian aboriginal language center demanded the removal of the <a href="https://en.wikipedia.org/wiki/Palawa_kani">English Wikipedia article on "palawa kani"</a>, claiming copyright over the entirety of the language. We refused to remove the article because copyright law simply cannot be used to stop people from using an entire language or to prevent general discussion about the language. Such a broad claim would have chilled free speech and negatively impacted research, education, and public discourse — activities that Wikimedia serves to promote.</p>
+    <p>A Tasmanian aboriginal language center demanded the removal of the <a href="https://en.wikipedia.org/wiki/Palawa_kani">English Wikipedia article on "palawa kani"</a>, claiming copyright over the entirety of the language. We refused to remove the article because copyright law simply cannot be used to stop people from using an entire language or to prevent general discussion about the language. Such a broad claim would have chilled free speech and negatively impacted research, education, and public discourse—activities that Wikimedia serves to promote.</p>
   </div>
 </div>
 
@@ -116,7 +116,7 @@
     <p>A well-functioning copyright law carefully balances the interests of the public in access to expressive works and... the interests of copyright owners in being compensated for uses of their works.</p>
     <footer>
       <img src="/images/quote_samuelson.png">
-      <p>Pamuela Samuelson<small>Director of Berkeley Center for Law &amp; Technology (2010)</small></p>
+      <p>Pamela Samuelson<small>Director of Berkeley Center for Law &amp; Technology (2010)</small></p>
     </footer>
   </blockquote>
 </div>
@@ -124,11 +124,11 @@
 <div class="col-md-4">
   <div class="story">
     <h3>
-      Babe Ruth's "Called Shot"<br>
+      Babe Ruth's Called Shot<br>
       <small>March 2014</small>
     </h3>
     <hr />
-    <p>A film shot by Matt Kandle at the <a href="https://en.wikipedia.org/wiki/1932_World_Series">1932 World Series</a> provides evidence of <a href="https://en.wikipedia.org/wiki/Babe_Ruth">Babe Ruth's</a> famous “<a href="https://en.wikipedia.org/wiki/Babe_Ruth%27s_called_shot">called shot</a>,” in which he gestured to center field before hitting a home run to the same location. The copyright owner sent us a DMCA takedown request regarding a still image from the film used on <a href="https://en.wikipedia.org">English Wikipedia</a>. We declined to remove the image on the basis of <a href="https://en.wikipedia.org/wiki/Fair_use">fair use</a>, citing its extraordinary value in illustrating the famous moment and the educational purpose it serves.</p>
+    <p>A film shot by Matt Kandle at the <a href="https://en.wikipedia.org/wiki/1932_World_Series">1932 World Series</a> provides evidence of <a href="https://en.wikipedia.org/wiki/Babe_Ruth">Babe Ruth's</a> famous “<a href="https://en.wikipedia.org/wiki/Babe_Ruth%27s_called_shot">called shot</a>,” in which he gestured to center field before hitting a home run to the same location. The copyright owner sent us a DMCA takedown request regarding a <a href="https://en.wikipedia.org/wiki/Babe_Ruth%27s_called_shot#mediaviewer/File:Ruth1932-1.jpg">still image</a> from the film used on <a href="https://en.wikipedia.org">English Wikipedia</a>. We declined to remove the image on the basis of <a href="https://en.wikipedia.org/wiki/Fair_use">fair use</a>, citing its extraordinary value in illustrating the famous moment and the educational purpose it serves.</p>
   </div>
 </div>
 
@@ -150,7 +150,7 @@
       <small>November 2013</small>
     </h3>
     <hr />
-    <p>A publishing company sent us a takedown request concerning four famous works on <a href="https://wikisource.org/">Wikisource</a>: French translations of <a href="https://en.wikipedia.org/wiki/Jane_Austen">Jane Austen's</a> <a href="http://fr.wikisource.org/wiki/Les_Cinq_Filles_de_Mrs_Bennet">Pride and Prejudice</a> and <a href="http://fr.wikisource.org/wiki/Persuasion">Persuasion</a>, a French translation <a href="https://en.wikipedia.org/wiki/Arthur_Conan_Doyle">Arthur Conan Doyle's</a> <a href="https://fr.wikisource.org/wiki/Les_Aventures_de_Sherlock_Holmes">The Adventures of Sherlock Holmes</a>, and <a href="https://en.wikipedia.org/wiki/Jean_de_la_Fontaine">Jean de la Fontaine’s</a> <a href="http://fr.wikisource.org/wiki/Fables_de_La_Fontaine,_livres_I-III">Fables</a>. We immediately noticed the peculiarity with the request: all four original works (and likely their French translations as well) were old enough to have fallen into the public domain. When we alerted the company to this point, it rescinded the takedown notice.</p>
+    <p>A publishing company sent us a takedown request concerning four famous works on <a href="https://wikisource.org/">Wikisource</a>: French translations of <a href="https://en.wikipedia.org/wiki/Jane_Austen">Jane Austen's</a> <a href="http://fr.wikisource.org/wiki/Les_Cinq_Filles_de_Mrs_Bennet"><em>Pride and Prejudice</em></a> and <a href="http://fr.wikisource.org/wiki/Persuasion"><em>Persuasion</em></a>, a French translation <a href="https://en.wikipedia.org/wiki/Arthur_Conan_Doyle">Arthur Conan Doyle's</a> <a href="https://fr.wikisource.org/wiki/Les_Aventures_de_Sherlock_Holmes"><em>The Adventures of Sherlock Holmes</em></a>, and <a href="https://en.wikipedia.org/wiki/Jean_de_la_Fontaine">Jean de la Fontaine’s</a> <a href="http://fr.wikisource.org/wiki/Fables_de_La_Fontaine,_livres_I-III"><em>Fables</em></a>. We immediately noticed the peculiarity with the request: all four original works (and likely their French translations as well) were old enough to have fallen into the <a href="https://en.wikipedia.org/wiki/Public_domain">public domain</a>. When we alerted the company to this point, it rescinded the takedown notice.</p>
   </div>
 </div>
 
