--- a/source/faq.html.erb
+++ b/source/faq.html.erb
@@ -9,14 +9,14 @@
 <div class="col-md-3"></div>
 
 <div class="col-md-9">
-	<h2>What sort of information gets requested?</h2>
+	<h2 id="#information">What sort of information gets requested?</h2>
 	<p>All sorts of identifying information, public and nonpublic, gets requested. Requests tend to be broad in nature, in order to capture as much information as possible. However, because we collect relatively <a href="https://wikimediafoundation.org/wiki/Privacy_policy#Types_of_Information_We_Receive_From_You.2C_How_We_Get_It.2C_.26_How_We_Use_It">small amounts of information</a> and retain it for <a href="https://meta.wikimedia.org/wiki/Data_retention_guidelines">limited amounts of time</a>, we frequently have little to disclose.</p>
 
-	<h2>Does WMF have different standards depending on who is requesting? </h2>
-	<p>No. Regardless of who is requesting user data—be it an individual, a government, or a law enforcement officer—we typically do not produce information as a result of a request unless we have received proper legal process. More information can be found in our <a href="https://wikimediafoundation.org/wiki/Requests_for_user_information_procedures_%26_guidelines">Requests for User Information Procedure & Guidelines</a>.</p>
+	<h2 id="#standard">Does WMF have different standards depending on who is requesting? </h2>
+	<p>No. Regardless of who is requesting user data—be it an individual, a government, or a law enforcement officer—we typically do not produce information as a result of a request unless we have received proper legal process. More information can be found in our <a href="https://wikimediafoundation.org/wiki/Requests_for_user_information_procedures_%26_guidelines">Requests for User Information Procedure &amp; Guidelines</a>.</p>
 
 	<h2>What happens when you receive a request from abroad?</h2>
-	<p>Per our <a href="https://wikimediafoundation.org/wiki/Requests_for_user_information_procedures_%26_guidelines">Requests for User Information Procedure & Guidelines</a>, we require that requests originating from outside of the United States to follow the <a href="https://en.wikipedia.org/wiki/Mutual_Legal_Assistance_Treaty">mutual legal assistance treaty</a> (MLAT) process or <a href="https://en.wikipedia.org/wiki/Letter_rogatory">letters rogatory</a> process so that a U.S. court will issue the required U.S. legal process to the Wikimedia Foundation.</p>
+	<p>Per our <a href="https://wikimediafoundation.org/wiki/Requests_for_user_information_procedures_%26_guidelines">Requests for User Information Procedure &amp; Guidelines</a>, we require that requests originating from outside of the United States to follow the <a href="https://en.wikipedia.org/wiki/Mutual_Legal_Assistance_Treaty">mutual legal assistance treaty</a> (MLAT) process or <a href="https://en.wikipedia.org/wiki/Letter_rogatory">letters rogatory</a> process so that a U.S. court will issue the required U.S. legal process to the Wikimedia Foundation.</p>
 
 	<h2>When would you not tell a user that his or her nonpublic personal information is being disclosed as a result of a legal process, such as a subpoena? </h2>
 	<p>We are committed to notifying users if we plan on disclosing nonpublic personal information. However, we cannot notify a user if we are legally restrained from doing so (e.g. by a gag order), if a credible threat to life or limb is present, or if the user has not provided us with an e-mail address or valid contact information.</p>
@@ -72,7 +72,7 @@
 	<p>In the unlikely event that you are the subject of a lawsuit, it is highly recommended that you consult your own lawyer. There are a number of organizations that fight on a user's behalf, like the <a href="http://www.casp.net/">California Anti-SLAPP Project</a> or the <a href="https://www.eff.org/">Electronic Frontier Foundation</a> (EFF). If you need help finding an attorney, WMF may be able to put you in touch with some of these organizations or help you secure an attorney at reduced or pro-bono rates. Additionally, in rare cases, assistance may also be available under our <a href="https://meta.wikimedia.org/wiki/Legal_and_Community_Advocacy/Legal_Fees_Assistance_Program">Legal Fees Assistance Program</a> or <a href="https://meta.wikimedia.org/wiki/Legal_and_Community_Advocacy/Legal_Policies#Defense_of_Contributors">Defense of Contributors Program</a>.</p>
 
 	<h2>Does WMF ever remove content?</h2>
-	<p>Absent the receipt of a legally valid DMCA notice, the Wikimedia Foundation will generally only remove content in exceptional circumstances.</p>
+	<p>Absent the receipt of a legally valid <a href="http://www.chillingeffects.org/dmca512/faq.cgi#QID130">DMCA notice</a>, the Wikimedia Foundation will generally only remove content in exceptional circumstances.</p>
 
 	<h2>What makes a DMCA takedown notice "valid" or "proper"?</h2>
 	<p>The DMCA has several <a href="https://en.wikipedia.org/wiki/Online_Copyright_Infringement_Liability_Limitation_Act#Notice_from_copyright_owner">formal requirements</a> for notices. However, our evaluation isn’t over when we receive a notice that meets all of these requirements. We will also analyze the copyright eligibility of the work being infringed, whether the allegedly infringing material actually infringes, and whether the allegedly infringing material is a <a href="https://en.wikipedia.org/wiki/Fair_use">fair use</a> of the requester’s work. For more information, see our <a href="http://wikimediafoundation.org/wiki/DMCA_Policy">DMCA Policy</a>.</p>
