--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,7 +17,7 @@
 </div>
 
 <div class="col-md-4">
-	<a href="privacy/" class="story">
+	<a href="privacy/" class="story bignav">
 		<h3>Requests for <br />User Data</h3>
 		<hr/>
 		<p>
@@ -27,7 +27,7 @@
 </div>
 
 <div class="col-md-4">
-	<a href="content/" class="story">
+	<a href="content/" class="story bignav">
 		<h3>Requests for Content Alteration &amp; Takedown</h3>
 		<hr/>
 		<p>
@@ -37,7 +37,7 @@
 </div>
 
 <div class="col-md-4">
-	<a href="faq/" class="story">
+	<a href="faq/" class="story bignav">
 		<h3>Frequently Asked<br />Questions</h3>
 		<hr/>
 		<p>
