--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -28,10 +28,10 @@
 
 <div class="col-md-8">
 	<p class="lead">
-	<a href="https://meta.wikimedia.org/wiki/Wikimedia_Foundation_Guiding_Principles#Free_speech">Freedom of speech is essential</a> to the Wikimedia movement — our projects cannot flourish in an ecosystem where individuals cannot speak freely. Our users trust us to protect their identities against unlawful disclosure and we take this responsibility seriously.
+	<a href="https://meta.wikimedia.org/wiki/Wikimedia_Foundation_Guiding_Principles#Free_speech">Freedom of speech is essential</a> to the Wikimedia movement—our projects cannot flourish in an ecosystem where individuals cannot speak freely. Our users trust us to protect their identities against unlawful disclosure and we take this responsibility seriously.
 	</p>
 
-	<p>However, every year, governments, individuals, and corporations ask us to disclose user data. Often, we have no nonpublic information to disclose because we <a href="https://wikimediafoundation.org/wiki/Privacy_policy#Types_of_Information_We_Receive_From_You.2C_How_We_Get_It.2C_.26_How_We_Use_It">collect little nonpublic information</a> about users and retain that information for a <a href="https://meta.wikimedia.org/wiki/Data_retention_guidelines">short period of time</a>. But when we do have data, we carefully evaluate every request before considering disclosure. If the requests do not meet our <a href="https://wikimediafoundation.org/wiki/Requests_for_user_information_procedures_%26_guidelines">standards</a> — if they are overly broad, unclear, or irrelevant—we will push back on behalf of our users.</p>
+	<p>However, every year, governments, individuals, and corporations ask us to disclose user data. Often, we have no nonpublic information to disclose because we <a href="https://wikimediafoundation.org/wiki/Privacy_policy#Types_of_Information_We_Receive_From_You.2C_How_We_Get_It.2C_.26_How_We_Use_It">collect little nonpublic information</a> about users and retain that information for a <a href="https://meta.wikimedia.org/wiki/Data_retention_guidelines">short period of time</a>. But when we do have data, we carefully evaluate every request before considering disclosure. If the requests do not meet our <a href="https://wikimediafoundation.org/wiki/Requests_for_user_information_procedures_%26_guidelines">standards</a>—if they are overly broad, unclear, or irrelevant—we will push back on behalf of our users.</p>
 
 	<p>If we must produce information due to a legally valid request, we will notify the affected user before we disclose, if we are legally permitted and have the means to do so. In certain cases, we may help find assistance for users to fight an invalid request.</p>
 
@@ -41,13 +41,13 @@
 		<p>Man is least himself when he talks in his own person. Give him a mask, and he will tell you the truth.</p>
 		<footer>
 			<img src="/images/quote_wilde.png">
-			<p>Oscar Wilde, Writer &amp; Poet (1891)</p>
+			<p>Oscar Wilde <small>Writer &amp; Poet (1891)</small></p>
 		</footer>
 	</blockquote>
 
 	<div id="summary_table" class="story">
 		<h3>
-			<small>July 2012 - June 2014</small><br />
+			<small>July 2012 – June 2014</small><br />
 			Summary
 		</h3>
 		<hr />
@@ -69,15 +69,15 @@
 				<td>15</td>
 			</tr>
 			<tr>
-				<td>Civil Subpoenas</td>
+				<td><a href="#">Civil Subpoenas</a></td>
 				<td>8</td>
 			</tr>
 			<tr>
-				<td>Criminal Subpoena</td>
+				<td><a href="#">Criminal Subpoenas</a></td>
 				<td>5</td>
 			</tr>
 			<tr>
-				<td>Administrative Subpoena</td>
+				<td>Administrative Subpoenas</td>
 				<td>0</td>
 			</tr>
 			<tr>
