--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -153,6 +153,11 @@ footer {
 		}
 	}
 
+	&.bignav {
+		margin-top: 40px;
+		margin-bottom: 20px;
+	}
+
 	p {
 		margin: 20px 16px 14px;
 	}
@@ -219,12 +224,11 @@ blockquote {
 			margin-top: 25px;
 			margin-left: 170px;
 			color: $gray;
-			text-transform: uppercase;
 
 			small {
-				display: inline;
+				display: block;
 				text-transform: none;
-				margin-left: 10px;
+				font-style: italic;
 
 				&:before {
 					content: '';
