Add 'current' class in navigation
Helper in config creates the link checking
the path of the request and adding the class
accordingly.

Change-Id: I9149eac0a289933f561048f87b8af02dd6c36ec7

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -29,9 +29,9 @@
 					</div>
 					<div id="navbar-collapse" class="collapse navbar-collapse">
 						<ul class="nav navbar-nav navbar-right">
-							<li><a href="/privacy">User Data</a></li>
-							<li><a href="/content">Content</a></li>
-							<li><a href="/faq">FAQ</a></li>
+							<li><%= navigation_link( 'User Data', 'privacy' ) %></li>
+							<li><%= navigation_link( 'Content', '/content' ) %></li>
+							<li><%= navigation_link( 'FAQ', '/faq' ) %></li>
 						</ul>
 					</div>
 				</nav>
