--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -34,11 +34,15 @@ h2 {
 
 	.navbar-nav > li > a {
 		color: $black;
-		border-bottom: 2px solid $blue;
+		border-bottom: 2px solid $lightgray;
 		margin-left: 10px;
 		font-size: 16px;
 		padding: 16px 0 18px 0;
 		width: 115px;
+
+		&:hover, &.current {
+			border-bottom-color: $blue;
+		}
 	}
 
 	.navbar-brand {
