Stop showing title on navbar on homepage
Change-Id: Ib4c402080bde25cb347e2c21a7781e8318fce3d3

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -24,7 +24,9 @@
 						</button>
 						<a class="navbar-brand" href="/">
 							<img src="/images/logo.png" />
-							Wikimedia Foundation Transparency Report
+							<% if request.path != 'index.html'  %>
+								Wikimedia Foundation Transparency Report
+							<% end %>
 						</a>
 					</div>
 					<div id="navbar-collapse" class="collapse navbar-collapse">
