Fix CSS for mobile
Change-Id: I7dfa08761e3475cddd9c33a04961feda7dd8ef88

--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -69,11 +69,11 @@
 				<td>15</td>
 			</tr>
 			<tr>
-				<td><a href="#">Civil Subpoenas</a></td>
+				<td><a href="/faq#civil_subpoena">Civil Subpoenas</a></td>
 				<td>8</td>
 			</tr>
 			<tr>
-				<td><a href="#">Criminal Subpoenas</a></td>
+				<td><a href="/faq#criminal_subpoena">Criminal Subpoenas</a></td>
 				<td>5</td>
 			</tr>
 			<tr>
