--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -212,14 +212,14 @@ blockquote {
 	font: 120px serif;
 	line-height: 50px;
 	margin-top: 60px;
-	width: 680px;
+	width: 100%;
 	margin-bottom: 60px;
 
 	p {
 		color: #000;
 		font: 26px/36px serif;
 		font-weight: normal;
-		width: 500px;
+		width: 80%;
 		margin-left: 80px;
 	}
 
@@ -312,11 +312,55 @@ blockquote {
 
 }
 
-@media (max-width: 990px){
+@media (max-width: 768px){
+	.navbar-default .navbar-brand {
+		font-size: 10px;
+	}
+
+	.container .jumbotron .mainheading{
+		font-size: 35px;
+		line-height: 50px;
+	}
+
 	.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a {
 		border-bottom: none;
 		border-left-width: 2px;
 		border-left-style: solid;
 		padding-left: 10px;
+	}
+
+	blockquote {
+		margin: 0;
+		padding: 0;
+		font-size: 60px;
+
+		p {
+			width: auto;
+			margin: 0;
+			margin-left: 40px;
+		}
+
+		footer {
+			img {
+				margin-left: 40px;
+			}
+
+			p {
+				margin-left: 130px;
+			}
+		}
+	}
+
+	p.lead {
+		font-size: 20px;
+	}
+
+	.story, .scorecard {
+		margin: 0;
+		margin-top: 30px;
+	}
+
+	.story table {
+		width: 90%;
 	}
 }
